debug-pvc-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: output-retriever
  namespace: montage-ai
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["sleep", "3600"]
    volumeMounts:
    - mountPath: /data/output
      name: output
  volumes:
  - name: output
    persistentVolumeClaim:
      claimName: montage-ai-output-nfs
